--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,9 @@ ScaffoldingReadMe.txt
 # NuGet Symbol Packages
 *.snupkg
 
+# The packages folder can be ignored because of Package Restore
+.vs/
+
 # Others
 ~$*
 *~
