Fixed pre render problem. Refactored services and components

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "XenoCantoURL": "https://xeno-canto.org/api/3/"
+  "XenoCantoURL": "https://xeno-canto.org/api/3/",
+  "VaultUrl" :  "https://wildapi.vault.azure.net/" 
 }
