--- a/xenocantobirdlog.csproj
+++ b/xenocantobirdlog.csproj
@@ -10,6 +10,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Identity" Version="1.17.0" />
+    <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.8.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid" Version="9.0.10" />
     <PackageReference Include="System.Text.Json" Version="9.0.10" />
   </ItemGroup>
